# 4ir-software-dev

./: README.md
step00_rust_web_hello/: Cargo.toml  readme.md
step00_rust_web_server_hello/: Cargo.toml
step00_rust_web_server_hello/src/: main.rs
step01_rust_mcu_hello/: Cargo.toml  readme.md
step01_rust_mcu_hello/.cargo/: config
step01_rust_mcu_hello/auxiliary/: Cargo.toml
step01_rust_mcu_hello/auxiliary/src/: lib.rs
step01_rust_mcu_hello/src/: main.rs
step02-rust-wasm-hello/: Cargo.toml  README.md
step02-rust-wasm-hello/src/: lib.rs
step02_rust_webassembly_hello/: Cargo.toml
